{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 2762,
  "lineage": "eea42683-d75d-66b9-0441-bf89396e47cb",
  "resources": [
    {
      "module": "module.cs_demo.module.eks[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:security-group/sg-076df708785d596f7",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-076df708785d596f7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from proxy workers to API endpoint",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043473ef8e610f486"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0340d75760dde62e7"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bt-pc-demo-eks-cluster-20250627015637480300000016",
            "name_prefix": "bt-pc-demo-eks-cluster-",
            "owner_id": "637423342822",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bt-pc-demo-eks-cluster",
              "project": "bt-pc-demo",
              "workflow": "bt-pc-demo-workflow"
            },
            "tags_all": {
              "Name": "bt-pc-demo-eks-cluster",
              "project": "bt-pc-demo",
              "workflow": "bt-pc-demo-workflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cs_demo.module.eks[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:security-group/sg-0340d75760dde62e7",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0340d75760dde62e7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076df708785d596f7"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076df708785d596f7"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076df708785d596f7"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076df708785d596f7"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076df708785d596f7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076df708785d596f7"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "bt-pc-demo-eks-node-20250627015637480400000017",
            "name_prefix": "bt-pc-demo-eks-node-",
            "owner_id": "637423342822",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bt-pc-demo-eks-node",
              "kubernetes.io/cluster/bt-pc-demo-eks": "owned",
              "project": "bt-pc-demo",
              "workflow": "bt-pc-demo-workflow"
            },
            "tags_all": {
              "Name": "bt-pc-demo-eks-node",
              "kubernetes.io/cluster/bt-pc-demo-eks": "owned",
              "project": "bt-pc-demo",
              "workflow": "bt-pc-demo-workflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cs_demo.module.eks[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-764760847",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076df708785d596f7",
            "security_group_rule_id": "sgr-0d94654837d951d7a",
            "self": false,
            "source_security_group_id": "sg-0340d75760dde62e7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.aws_security_group.worker",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "strongdm",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from proxy workers to API endpoint",
            "from_port": 443,
            "id": "sgrule-2527804850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076df708785d596f7",
            "security_group_rule_id": "sgr-0ba172aaacc965ebe",
            "self": false,
            "source_security_group_id": "sg-043473ef8e610f486",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.aws_security_group.worker",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cs_demo.module.eks[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2287450745",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0340d75760dde62e7",
            "security_group_rule_id": "sgr-0f8f82db2c865e738",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2392354147",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0340d75760dde62e7",
            "security_group_rule_id": "sgr-0dff56e0e76a34e81",
            "self": false,
            "source_security_group_id": "sg-076df708785d596f7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-154853309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0340d75760dde62e7",
            "security_group_rule_id": "sgr-0c4aec7de4e6951fd",
            "self": false,
            "source_security_group_id": "sg-076df708785d596f7",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3229136939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0340d75760dde62e7",
            "security_group_rule_id": "sgr-09df52674c744fc39",
            "self": false,
            "source_security_group_id": "sg-076df708785d596f7",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3542385674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0340d75760dde62e7",
            "security_group_rule_id": "sgr-0683fb08b3bf5cd71",
            "self": false,
            "source_security_group_id": "sg-076df708785d596f7",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3078993857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0340d75760dde62e7",
            "security_group_rule_id": "sgr-0b1e2b1d564c78f37",
            "self": false,
            "source_security_group_id": "sg-076df708785d596f7",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2290660768",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0340d75760dde62e7",
            "security_group_rule_id": "sgr-0e55364d44ff26acf",
            "self": false,
            "source_security_group_id": "sg-076df708785d596f7",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1644232829",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0340d75760dde62e7",
            "security_group_rule_id": "sgr-08e387f3a43e4a7c8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2323708762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0340d75760dde62e7",
            "security_group_rule_id": "sgr-0747607927a6c944e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-786389173",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0340d75760dde62e7",
            "security_group_rule_id": "sgr-04f2e6bb55a30ce73",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.eks.module.eks.aws_security_group.cluster",
            "module.cs_demo.module.eks.module.eks.aws_security_group.node",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:637423342822:loadbalancer/net/proxy-2025062701563904580000001a/8fb7a712e3ba5db3",
            "arn_suffix": "net/proxy-2025062701563904580000001a/8fb7a712e3ba5db3",
            "dns_name": "proxy-2025062701563904580000001a-8fb7a712e3ba5db3.elb.us-west-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:637423342822:loadbalancer/net/proxy-2025062701563904580000001a/8fb7a712e3ba5db3",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "proxy-2025062701563904580000001a",
            "name_prefix": "proxy-",
            "security_groups": [
              "sg-0ee066bf548a4d952"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b3dad3c16600d5c7"
              },
              {
                "subnet_id": "subnet-0e1a5b7f5693ebd90"
              }
            ],
            "subnets": [
              "subnet-0b3dad3c16600d5c7",
              "subnet-0e1a5b7f5693ebd90"
            ],
            "vpc_id": "vpc-0fca5fcf147ddf005",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.aws_security_group.nlb",
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_subnet.public",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this_sdm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:637423342822:listener/net/proxy-2025062701563904580000001a/8fb7a712e3ba5db3/7ce93c5976c6a50a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:637423342822:targetgroup/proxy-20250627015635364000000012/ef22a9545f39ce8e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:637423342822:listener/net/proxy-2025062701563904580000001a/8fb7a712e3ba5db3/7ce93c5976c6a50a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:637423342822:loadbalancer/net/proxy-2025062701563904580000001a/8fb7a712e3ba5db3",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.aws_lb.this",
            "module.cs_demo.module.infrastructure.aws_lb_target_group.this",
            "module.cs_demo.module.infrastructure.aws_security_group.nlb",
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_subnet.public",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:637423342822:targetgroup/proxy-20250627015635364000000012/ef22a9545f39ce8e",
            "arn_suffix": "targetgroup/proxy-20250627015635364000000012/ef22a9545f39ce8e",
            "connection_termination": true,
            "deregistration_delay": "0",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:637423342822:targetgroup/proxy-20250627015635364000000012/ef22a9545f39ce8e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:637423342822:loadbalancer/net/proxy-2025062701563904580000001a/8fb7a712e3ba5db3"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "proxy-20250627015635364000000012",
            "name_prefix": "proxy-",
            "port": 8443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bridge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:security-group/sg-0429a4bd7b2d4be38",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0429a4bd7b2d4be38",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow TCP:8443 from NLB",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ee066bf548a4d952"
                ],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "sdm-proxy-20250627015639044900000019",
            "name_prefix": "sdm-proxy-",
            "owner_id": "637423342822",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.aws_security_group.nlb",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:security-group/sg-0ee066bf548a4d952",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee066bf548a4d952",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP:443 ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sdm-proxy-20250627015635386000000014",
            "name_prefix": "sdm-proxy-",
            "owner_id": "637423342822",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:security-group/sg-043473ef8e610f486",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043473ef8e610f486",
            "ingress": [],
            "name": "sdm-proxy-20250627015635368200000013",
            "name_prefix": "sdm-proxy-",
            "owner_id": "637423342822",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:network-acl/acl-0f237c05d1d4a4952",
            "default_network_acl_id": "acl-0f237c05d1d4a4952",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f237c05d1d4a4952",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "637423342822",
            "subnet_ids": [
              "subnet-01d905077b27183ba",
              "subnet-094cc43384d6f0879",
              "subnet-0b3dad3c16600d5c7",
              "subnet-0e1a5b7f5693ebd90"
            ],
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:route-table/rtb-0939643744b7cb2bd",
            "default_route_table_id": "rtb-0939643744b7cb2bd",
            "id": "rtb-0939643744b7cb2bd",
            "owner_id": "637423342822",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:security-group/sg-0f66746c9cc05f11a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f66746c9cc05f11a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "637423342822",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbbb4076f789d85c",
            "arn": "arn:aws:ec2:us-west-2:637423342822:elastic-ip/eipalloc-0bbbb4076f789d85c",
            "association_id": "eipassoc-09ef49834a434de93",
            "domain": "vpc",
            "id": "eipalloc-0bbbb4076f789d85c",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0e1adcd1917f0c6b6",
            "private_dns": "ip-10-0-102-38.us-west-2.compute.internal",
            "private_ip": "10.0.102.38",
            "public_dns": "ec2-54-184-197-93.us-west-2.compute.amazonaws.com",
            "public_ip": "54.184.197.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096d76e6980600d7c",
            "arn": "arn:aws:ec2:us-west-2:637423342822:elastic-ip/eipalloc-096d76e6980600d7c",
            "association_id": "eipassoc-04550edd3e35f0891",
            "domain": "vpc",
            "id": "eipalloc-096d76e6980600d7c",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0577b0292e8e26486",
            "private_dns": "ip-10-0-103-37.us-west-2.compute.internal",
            "private_ip": "10.0.103.37",
            "public_dns": "ec2-52-40-132-121.us-west-2.compute.amazonaws.com",
            "public_ip": "52.40.132.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:internet-gateway/igw-0a3ecb8dcf457c911",
            "id": "igw-0a3ecb8dcf457c911",
            "owner_id": "637423342822",
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbbb4076f789d85c",
            "association_id": "eipassoc-09ef49834a434de93",
            "connectivity_type": "public",
            "id": "nat-08ff7f06a0c4eb793",
            "network_interface_id": "eni-0e1adcd1917f0c6b6",
            "private_ip": "10.0.102.38",
            "public_ip": "54.184.197.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e1a5b7f5693ebd90",
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            }
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_eip.nat",
            "module.cs_demo.module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_subnet.public",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096d76e6980600d7c",
            "association_id": "eipassoc-04550edd3e35f0891",
            "connectivity_type": "public",
            "id": "nat-0aff0cb5a5dbad51b",
            "network_interface_id": "eni-0577b0292e8e26486",
            "private_ip": "10.0.103.37",
            "public_ip": "52.40.132.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b3dad3c16600d5c7",
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            }
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_eip.nat",
            "module.cs_demo.module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_subnet.public",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0291cc62e85497aa81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08ff7f06a0c4eb793",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0291cc62e85497aa8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_eip.nat",
            "module.cs_demo.module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_nat_gateway.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_route_table.private",
            "module.cs_demo.module.infrastructure.module.vpc.aws_subnet.public",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d2ae9c4f570ee26f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aff0cb5a5dbad51b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2ae9c4f570ee26f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_eip.nat",
            "module.cs_demo.module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_nat_gateway.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_route_table.private",
            "module.cs_demo.module.infrastructure.module.vpc.aws_subnet.public",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a3ecb8dcf457c911",
            "id": "r-rtb-076e2fe674ec2c3761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076e2fe674ec2c376",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_route_table.public",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:route-table/rtb-0291cc62e85497aa8",
            "id": "rtb-0291cc62e85497aa8",
            "owner_id": "637423342822",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ff7f06a0c4eb793",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:route-table/rtb-0d2ae9c4f570ee26f",
            "id": "rtb-0d2ae9c4f570ee26f",
            "owner_id": "637423342822",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aff0cb5a5dbad51b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:route-table/rtb-076e2fe674ec2c376",
            "id": "rtb-076e2fe674ec2c376",
            "owner_id": "637423342822",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3ecb8dcf457c911",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e995bfdc39fa533e",
            "route_table_id": "rtb-0291cc62e85497aa8",
            "subnet_id": "subnet-094cc43384d6f0879"
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_route_table.private",
            "module.cs_demo.module.infrastructure.module.vpc.aws_subnet.private",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2e5481a8f2a2bb5",
            "route_table_id": "rtb-0d2ae9c4f570ee26f",
            "subnet_id": "subnet-01d905077b27183ba"
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_route_table.private",
            "module.cs_demo.module.infrastructure.module.vpc.aws_subnet.private",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bd15e28e6b84d74",
            "route_table_id": "rtb-076e2fe674ec2c376",
            "subnet_id": "subnet-0e1a5b7f5693ebd90"
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_route_table.public",
            "module.cs_demo.module.infrastructure.module.vpc.aws_subnet.public",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049e96585e8308c3d",
            "route_table_id": "rtb-076e2fe674ec2c376",
            "subnet_id": "subnet-0b3dad3c16600d5c7"
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_route_table.public",
            "module.cs_demo.module.infrastructure.module.vpc.aws_subnet.public",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:subnet/subnet-094cc43384d6f0879",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094cc43384d6f0879",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423342822",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:subnet/subnet-01d905077b27183ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d905077b27183ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423342822",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:subnet/subnet-0e1a5b7f5693ebd90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1a5b7f5693ebd90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423342822",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:subnet/subnet-0b3dad3c16600d5c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3dad3c16600d5c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423342822",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            },
            "vpc_id": "vpc-0fca5fcf147ddf005"
          },
          "dependencies": [
            "module.cs_demo.module.infrastructure.data.aws_availability_zones.available",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc.this",
            "module.cs_demo.module.infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cs_demo.module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423342822:vpc/vpc-0fca5fcf147ddf005",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f237c05d1d4a4952",
            "default_route_table_id": "rtb-0939643744b7cb2bd",
            "default_security_group_id": "sg-0f66746c9cc05f11a",
            "dhcp_options_id": "dopt-0c94f0c9311900130",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fca5fcf147ddf005",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0939643744b7cb2bd",
            "owner_id": "637423342822",
            "tags": {
              "Name": "bt-pc-demo-vpc"
            },
            "tags_all": {
              "Name": "bt-pc-demo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}